# homebook

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  page.txt  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_education_scheduler_and_payments.py  0003_paypal_money_fields.py  0004_wallet_presence_access_and_favorites_state.py  0005_chat_group_invites.py  0006_support_tickets.py  0007_teacher_wallet_and_withdrawals.py
app/: __init__.py  main.py
app/core/: config.py  logging.py
app/data/: sample_books.json
app/db/: redis.py  session.py
app/middleware/: rate_limit.py
app/models/: __init__.py  asset.py  catalog.py  chat.py  chatbot.py  common.py  education.py  help.py  notification.py  recommendation.py  social.py  user.py
app/schemas/: auth.py  catalog.py  chat.py  chatbot.py  education.py  help.py  notification.py  post.py  profile.py  search.py
docs/: api_contract.md  hbx_unified_snippet.php  wordpress_amis_embed.html  wordpress_course_room_embed.html  wordpress_create_post_embed.html  wordpress_help_support_embed.html  wordpress_integration.md  wordpress_live_room_embed.html  wordpress_messages_embed.html  wordpress_notifications_embed.html  wordpress_paiement_annule_embed.html  wordpress_paiement_ok_embed.html  wordpress_posts_feed_embed.html  wordpress_profile_embed.html  wordpress_salle_embed.html  wordpress_search_bar_embed.html  wordpress_wallet_embed.html
tests/: test_auth_claims.py  test_ollama_guardrails.py  test_text_service.py
(+31 files in other folders)
