[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homebook-backend"
version = "0.1.0"
description = "Unified FastAPI backend for HomeBook"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "HomeBook"}]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "sqlalchemy[asyncio]>=2.0.31,<3.0.0",
  "alembic>=1.13.2,<2.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "psycopg[binary]>=3.2.1,<4.0.0",
  "redis>=5.0.7,<6.0.0",
  "arq>=0.26.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "PyJWT>=2.9.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "boto3>=1.34.0,<2.0.0",
  "prometheus-fastapi-instrumentator>=7.0.0,<8.0.0",
  "orjson>=3.10.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2,<9.0.0",
  "pytest-asyncio>=0.23.8,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "ruff>=0.6.0,<1.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
